[gd_scene load_steps=2 format=3 uid="uid://dov0pgn00mmee"]

[ext_resource type="Script" uid="uid://c7fw8crd2sh6a" path="res://Scenes/JoinMenu.gd" id="1_7be0v"]

[node name="JoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7be0v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 380.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter Server IP:"

[node name="IPLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
